# cocoOS_example

./: .gitignore  .gitmodules  CMakeLists.txt  docker-compose.yml  makefile  readme.md
.github/workflows/: main.yml
c/: .gdb_history  .gdbinit  Makefile  makefile
c/include/: user_os_config.h
c/src/: main.c
